started stuff with front-end

--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,15 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: "Inria Sans", sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+#title {
+  font-family: "JejuHallasan";
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+#topics {
+  display: flex;
 }
 
 @keyframes logo-spin {
