--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: row;
   margin: 4px;
-  background-color: aliceblue;
+  background-color: rgb(114, 152, 186);
   border: 3px solid black;
   height: 50px;
   border-radius: 10px;
