--- a/src/ChatPage.css
+++ b/src/ChatPage.css
@@ -1,11 +1,10 @@
 .chat-page-container {
-  position: fixed;
+  position: relative;
   height: 100vh;
 }
 
 #user-input {
-  position: absolute;
-  bottom: 100px;
+  margin-bottom: 100px;
   /* background: none; */
 }
 
