--- a/src/components/NamePrompt.css
+++ b/src/components/NamePrompt.css
@@ -1,4 +1,8 @@
 #name-prompt {
   background-color: chocolate;
   border: 2px solid black;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
 }
