--- a/src/components/NamePrompt.css
+++ b/src/components/NamePrompt.css
@@ -5,4 +5,6 @@
   height: 200px;
   display: flex;
   flex-direction: column;
+  z-index: 1000; /* Ensure above everything else */
+  margin: auto;
 }
