--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,14 @@
   border-radius: 10px;
   padding: 7px;
   align-items: center;
+  box-shadow: 10px 5px 5px;
 }
 
 .topic-card img {
   width: 50px;
   height: 50px;
   border-radius: 10px;
+  margin-right: 3px;
 }
 
 a {
