--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,10 @@
   display: flex;
   flex-direction: row;
   margin: 4px;
-  background-color: rgb(140, 140, 140);
-  border: 3px solid black;
+  background-color: white;
+  color: black;
+  border: 0px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   height: 50px;
   border-radius: 10px;
   padding: 7px;
@@ -37,6 +39,7 @@
   height: 50px;
   border-radius: 10px;
   margin-right: 3px;
+  margin-right: 5px;
 }
 
 a {
