--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
   margin: 4px;
   background-color: white;
   color: black;
-  border: 0px solid black;
+  border: 3px solid #3e5c76;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   height: 50px;
   border-radius: 10px;
