--- a/src/ChatPage.css
+++ b/src/ChatPage.css
@@ -63,3 +63,18 @@ button#question {
   height: auto;
   max-height: 50%;
 }
+
+.spinning {
+  animation: spin 2s linear infinite;
+  max-width: 200px;
+  max-height: 200px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
