--- a/src/components/QuestionPanel.css
+++ b/src/components/QuestionPanel.css
@@ -11,6 +11,7 @@
   border-radius: 5px;
   box-shadow: 10px 5px 5px rgba(179, 157, 117, 0.453);
   justify-content: space-between;
+  float: left;
 }
 
 #question-panel input {
