--- a/src/ChatPage.css
+++ b/src/ChatPage.css
@@ -20,6 +20,7 @@
   height: 30px;
   width: var(--input-width);
   border-radius: 15px;
+  margin-left: 20px;
 }
 
 #user-input textarea {
@@ -66,8 +67,6 @@ button#question {
 
 .spinning {
   animation: spin 2s linear infinite;
-  max-width: 200px;
-  max-height: 200px;
 }
 
 @keyframes spin {
